--- a/results/dataset spam (indo_email)/Spam Classification.ipynb
+++ b/results/dataset spam (indo_email)/Spam Classification.ipynb
@@ -421,25 +421,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Kategori    0\n",
-       "Pesan       0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jumlah nilai null adalah: 0 data\n"
+     ]
     }
    ],
    "source": [
     "# Mengecek nilai null pada dataset\n",
-    "df.isna().sum()"
+    "print(f\"Jumlah nilai null adalah: {df.isna().sum().sum()} data\")"
    ]
   },
   {
